# c10lp_refkit_zephyr

./: .gitignore  CMakeLists.txt  README.md  prj.conf
boards/riscv/c10lp_refkit/: Kconfig.board  Kconfig.defconfig  c10lp_refkit.dts  c10lp_refkit_defconfig
dts/riscv/: c10lp_refkit_soc.dtsi
soc/: __init__.py  soc_builder.py  zephyr_soc.py
src/: main.c  memtest.c  memtest.h
zephyr/dts/riscv/: c10lp_refkit_soc.dtsi
